mejorando estilo aside

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
         <h3>TEXTO</h3>
         <form action="#">
             <label for="superior">SUPERIOR</label><br>
-            <input class="colorFondo" name="superior" placeholder="TOP TEXT"><br>
+            <input name="superior" placeholder="TOP TEXT"><br>
             <input type="checkbox">
             <label>Sin texto superior</label><br>
             <label for="inferior">INFERIOR</label><br>
-            <input class="colorFondo" name="inferior" placeholder="BOTTOM TEXT"><br>
+            <input name="inferior" placeholder="BOTTOM TEXT"><br>
             <input type="checkbox">
             <label>Sin texto inferior</label><br>
             <label for="fuente">FUENTE</label><br>
-            <select class="colorFondo colorTexto">
+            <select>
                 <option value="arial">Arial</option>
                 <option value="arialblack">Arial Black</option>
                 <option value="americantypewriter">American Typewriter</option>
@@ -105,7 +105,7 @@
                 <option value="verdana">Verdana</option>
                 <option value="timesnewroman">Times New Roman</option>
             </select>
-            <input class="colorFondo ancho" type="number" placeholder="40">
+            <input class="ancho" type="number" placeholder="40">
             <button><i class="fa-solid fa-align-left"></i></button>
             <button><i class="fa-solid fa-align-center"></i></button>
             <button><i class="fa-solid fa-align-right"></i></button>
@@ -126,9 +126,9 @@
             <button>Claro</button>
             <button>Oscuro</button>
             <h4>ESPACIADO</h4>
-            <input class="colorFondo" type="number" placeholder="35">
+            <input type="number" placeholder="35">
             <H4>INTERLINEADO</H4>
-            <select class="colorFondo colorTexto">
+            <select>
                 <option value="0">0.8</option>
                 <option value="1">1</option>
                 <option value="12">1.2</option>
