--- a/index.html
+++ b/index.html
@@ -30,11 +30,68 @@
 
             </div>
             <div>
-                <h2>BOTTOM TEXT</h2>
+                <h2 id="textoInferiorH2">BOTTOM TEXT</h2>
             </div>
         </div>
         <button><i class="fa-solid fa-download"></i>Descargar meme</button>
     </section>
+
+    <aside class="barraLateral" id="myAside2">
+        <h3>TEXTO</h3>
+        <form action="#">
+            <label for="superior">SUPERIOR</label><br>
+            <input name="superior" placeholder="TOP TEXT" id="textoSuperiorInput"><br>
+            <input type="checkbox">
+            <label>Sin texto superior</label><br>
+            <label for="inferior">INFERIOR</label><br>
+            <input name="inferior" placeholder="BOTTOM TEXT" id="textoInferiorInput"><br>
+            <input type="checkbox">
+            <label>Sin texto inferior</label><br>
+            <label for="fuente">FUENTE</label><br>
+            <select>
+                <option value="arial">Arial</option>
+                <option value="arialblack">Arial Black</option>
+                <option value="americantypewriter">American Typewriter</option>
+                <option value="andalemono">Andale Mono</option>
+                <option value="comicsan ms">Comic Sans MS</option>
+                <option value="helvetica">Helvetica</option>
+                <option value="impact">Impact</option>
+                <option value="verdana">Verdana</option>
+                <option value="timesnewroman">Times New Roman</option>
+            </select>
+            <input class="ancho" type="number" placeholder="40">
+            <button id="botonAlinearIzquierda"><i class="fa-solid fa-align-left"></i></button>
+            <button id="botonAlinearCentro"><i class="fa-solid fa-align-center"></i></button>
+            <button id="botonAlinearDerecha"><i class="fa-solid fa-align-right"></i></button>
+            <div class="contenedorSelectorColor">
+                <div class="selectorColor">
+                    <h4>COLOR</h4>
+                    <input type="color">
+                </div>
+                <div class="selectorColor">
+                    <h4>FONDO</h4>
+                    <input type="color">
+                </div>
+            </div>
+            <input type="checkbox">
+            <label>Fondo transparente</label>
+            <h4>CONTORNO</h4>
+            <button>Ninguno</button>
+            <button>Claro</button>
+            <button>Oscuro</button>
+            <h4>ESPACIADO</h4>
+            <input type="number" placeholder="35">
+            <H4>INTERLINEADO</H4>
+            <select>
+                <option value="0">0.8</option>
+                <option value="1">1</option>
+                <option value="12">1.2</option>
+                <option value="15">1.5</option>
+                <option value="2">2</option>
+                <option value="25">2.5</option>
+            </select>
+        </form>
+    </aside>
 
     <aside class="barraLateral" id="myAside">
         <h3>IMÁGEN</h3>
@@ -42,7 +99,7 @@
             <label for="url">URL</label><br>
             <input type="url" id="imageUrlInput">
             <h4>FONDO</h4>
-            <input type="color">
+            <input type="color" id="colorFondoImagen">
             <select>
                 <option value="ninguno">Ninguno</option>
                 <option value="aclarar">Aclarar</option>
@@ -80,63 +137,6 @@
             <input class="margenes" type="range" id="negativo" min="0" max="100" step="1">
         </form>
         <button id="botonRestablecerFiltros">Restablecer filtros</button>
-    </aside>
-
-    <aside class="barraLateral" id="myAside2">
-        <h3>TEXTO</h3>
-        <form action="#">
-            <label for="superior">SUPERIOR</label><br>
-            <input name="superior" placeholder="TOP TEXT" id="textoSuperiorInput"><br>
-            <input type="checkbox">
-            <label>Sin texto superior</label><br>
-            <label for="inferior">INFERIOR</label><br>
-            <input name="inferior" placeholder="BOTTOM TEXT"><br>
-            <input type="checkbox">
-            <label>Sin texto inferior</label><br>
-            <label for="fuente">FUENTE</label><br>
-            <select>
-                <option value="arial">Arial</option>
-                <option value="arialblack">Arial Black</option>
-                <option value="americantypewriter">American Typewriter</option>
-                <option value="andalemono">Andale Mono</option>
-                <option value="comicsan ms">Comic Sans MS</option>
-                <option value="helvetica">Helvetica</option>
-                <option value="impact">Impact</option>
-                <option value="verdana">Verdana</option>
-                <option value="timesnewroman">Times New Roman</option>
-            </select>
-            <input class="ancho" type="number" placeholder="40">
-            <button><i class="fa-solid fa-align-left"></i></button>
-            <button><i class="fa-solid fa-align-center"></i></button>
-            <button><i class="fa-solid fa-align-right"></i></button>
-            <div class="contenedorSelectorColor">
-                <div class="selectorColor">
-                    <h4>COLOR</h4>
-                    <input type="color">
-                </div>
-                <div class="selectorColor">
-                    <h4>FONDO</h4>
-                    <input type="color">
-                </div>
-            </div>
-            <input type="checkbox">
-            <label>Fondo transparente</label>
-            <h4>CONTORNO</h4>
-            <button>Ninguno</button>
-            <button>Claro</button>
-            <button>Oscuro</button>
-            <h4>ESPACIADO</h4>
-            <input type="number" placeholder="35">
-            <H4>INTERLINEADO</H4>
-            <select>
-                <option value="0">0.8</option>
-                <option value="1">1</option>
-                <option value="12">1.2</option>
-                <option value="15">1.5</option>
-                <option value="2">2</option>
-                <option value="25">2.5</option>
-            </select>
-        </form>
     </aside>
 
 </main>
