ordenado de codigo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="...">
-    <meta name="description" content="Es...">
+    <meta name="keywords" content="Meme, generador, proyecto, imagen, estilos, filtros.">
+    <meta name="description" content="Esta es una página web generadora de memes. Se realiza a pedido del curso de FrontEnd, como proyecto de Javascript.">
     <meta name="author" content="Natalia Schwindt">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
@@ -61,14 +61,14 @@
                 <label for="fuente">FUENTE</label><br>
                 <select id="fuente" name="fuente" aria-label="Seleccione el tipo de fuente">
                     <option id="arial" value="arial">Arial</option>
-                    <option id="arialblack" value="arialblack">Arial Black</option>
-                    <option id="americantypewriter" value="americantypewriter">American Typewriter</option>
-                    <option id="andalemono" value="andalemono">Andale Mono</option>
-                    <option id="comicsansMs" value="comicsansMs">Comic Sans MS</option>
+                    <option id="arialBlack" value="arialBlack">Arial Black</option>
+                    <option id="americanTypewriter" value="americanTypewriter">American Typewriter</option>
+                    <option id="andaleMono" value="andaleMono">Andale Mono</option>
+                    <option id="comicSansMs" value="comicSansMs">Comic Sans MS</option>
                     <option id="helvetica" value="helvetica">Helvetica</option>
                     <option id="impact" value="impact">Impact</option>
                     <option id="verdana" value="verdana">Verdana</option>
-                    <option id="timesnewroman" value="timesnewroman">Times New Roman</option>
+                    <option id="timesNewRoman" value="timesNewRoman">Times New Roman</option>
                 </select>
 
                 <input id="tamanioFuente" class="ancho" type="number" placeholder="40" aria-label="Tamaño de fuente">
